@@ -64,6 +64,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
   - Fixed bounds issue in vdelivermail
   - Updated MySQL module to use "INSERT INTO .. ON DUPLICATE KEY UPDATE" instead of "REPLACE INTO"
   - Fixed overflow in PostgreSQL module
+  - Updated MySQL queries to use uppercase characters for SQL syntax
 
 5.4.28 - Released 10-Mar-2009
    Matt Brookings
